Articles grid: overflow fixed

--- a/app/blocks/article-preview/articles-grid.scss
+++ b/app/blocks/article-preview/articles-grid.scss
@@ -17,6 +17,7 @@
 }
 
 .articles-grid {
+  overflow: hidden;
 
   .col_three {
     @include respond-to(mobile) {
@@ -29,6 +30,7 @@
   padding: 0;
   margin: 0;
   float: left;
+  overflow: hidden;
 
   &:not(:first-of-type) {
     padding-top: 30px;
